--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.29.3",
     "node-sass": "^6.0.1",
+    "query-string": "^8.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-star-ratings": "^2.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
